Added a new Edit button for outside includes and libraries This solves part of [bug 58756]
Thanks to Gael de Chalendar < Gael . de-Chalendar in cea . fr >
CCMAIL: 58756@bugs.kde.org

--- a/parts/autoproject/subprojectoptionsdlgbase.ui
+++ b/parts/autoproject/subprojectoptionsdlgbase.ui
@@ -449,6 +449,14 @@
                                             </widget>
                                             <widget class="QPushButton">
                                                 <property name="name">
+                                                    <cstring>outsideedit_button</cstring>
+                                                </property>
+                                                <property name="text">
+                                                    <string>&amp;Edit...</string>
+                                                </property>
+                                            </widget>
+                                            <widget class="QPushButton">
+                                                <property name="name">
                                                     <cstring>outsideremove_button</cstring>
                                                 </property>
                                                 <property name="text">
@@ -845,6 +853,12 @@
         <slot>outsideAddClicked()</slot>
     </connection>
     <connection>
+        <sender>outsideedit_button</sender>
+        <signal>clicked()</signal>
+        <receiver>sub project options widget</receiver>
+        <slot>outsideEditClicked()</slot>
+    </connection>
+    <connection>
         <sender>outsidemovedown_button</sender>
         <signal>clicked()</signal>
         <receiver>sub project options widget</receiver>
@@ -912,6 +926,7 @@
     <tabstop>insidemovedown_button</tabstop>
     <tabstop>outsideinc_listview</tabstop>
     <tabstop>outsideadd_button</tabstop>
+    <tabstop>outsideedit_button</tabstop>
     <tabstop>outsideremove_button</tabstop>
     <tabstop>outsidemoveup_button</tabstop>
     <tabstop>outsidemovedown_button</tabstop>
@@ -933,6 +948,7 @@
     <slot access="protected">insideMoveUpClicked()</slot>
     <slot access="protected">buildorderMoveUpClicked()</slot>
     <slot access="protected">outsideAddClicked()</slot>
+    <slot access="protected">outsideEditClicked()</slot>
     <slot access="protected">outsideMoveDownClicked()</slot>
     <slot access="protected">outsideMoveUpClicked()</slot>
     <slot access="protected">outsideRemoveClicked()</slot>
